small change to push to master

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: default
 
 <h2>Subhead</h2>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish.</p>
+<p>Welcome to Responsive.ly</p>
 
 {% for post in paginator.posts %}
   <div class="entry excerpt">
